<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dashboardColor">

    <android.support.v7.widget.CardView
        android:id="@+id/mycard1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="16dp"
        app:contentPadding="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_title"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_title"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                />
            <Spinner
                android:id="@+id/projectSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#ffffff"
                android:textSize="100sp"
                android:background="@drawable/custom_spinner"
                />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_desp_first" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_title"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_sub_title"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/add_view"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                    <Spinner
                        android:id="@+id/projectSpinner1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="#ffffff"
                        android:textSize="100sp"
                        android:background="@drawable/custom_spinner"
                        android:layout_weight="1"
                        />
                    <Spinner
                        android:id="@+id/projectSpinner2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="#ffffff"
                        android:textSize="100sp"
                        android:background="@drawable/custom_spinner"
                        android:layout_weight="1"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/add_view"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:textColor="@color/addi_add_btn"
                android:background="@drawable/custom_add_button"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:text="ADD ANOTHER"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_used"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>

</ScrollView>