<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Card View-1 For the Camera Action -->
        <android.support.v7.widget.CardView
            android:id="@+id/cameraAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="16dp"
            app:contentPadding="15dp">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/imgView2_string"
                        android:textSize="30sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/darker_gray" />


                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/receipts"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <ImageButton
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/capture"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:src="@drawable/camera"
                        android:background="@drawable/border1dp"
                        />
                    <ImageButton
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/gallery"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:src="@drawable/gallery"
                        android:background="@drawable/border1dp"
                        android:layout_marginLeft="5dp" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Card View-2 For the Details of Procurement-->
        <android.support.v7.widget.CardView
            android:id="@+id/proc_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="16dp"
            app:contentPadding="15dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/purchace_detail"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/fill_details" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp">

                        <Spinner
                            android:id="@+id/goods_cat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="#ffffff"
                            android:textSize="15sp"
                            android:layout_weight="1.8"
                            android:background="@drawable/custom_spinner"
                            />

                        <Spinner
                            android:id="@+id/no_of_items"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="#ffffff"
                            android:textSize="15sp"
                            android:layout_weight="1.8"
                            android:background="@drawable/custom_spinner"
                            />

                    </LinearLayout>


                        <EditText
                            android:id="@+id/goods_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:hint="@string/edtTxthint1"
                            android:layout_marginTop="15dp"
                            />

                        <EditText
                            android:id="@+id/purchace_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edtTxthint2"
                            android:layout_marginTop="15dp"
                            android:inputType="text"
                            />

                </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>